# pi-usb-webcam

./: CMakeLists.txt
src/: main.cpp  webcam_service.cpp  webcam_service.h
